--- a/envDS.yml
+++ b/envDS.yml
@@ -1,6 +1,7 @@
 name: envDS
 channels:
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - appdirs=1.4.4=pyhd3eb1b0_0
@@ -16,8 +17,8 @@ dependencies:
   - bottleneck=1.3.4=py39h080aedc_0
   - brotli=1.0.9=ha925a31_2
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2022.3.29=haa95532_1
-  - certifi=2021.10.8=py39haa95532_2
+  - ca-certificates=2022.6.15=h5b45459_0
+  - certifi=2022.6.15=py39hcbf5309_0
   - cftime=1.5.1.1=py39h080aedc_0
   - click=8.0.4=py39haa95532_0
   - colorama=0.4.4=pyhd3eb1b0_0
@@ -96,6 +97,7 @@ dependencies:
   - matplotlib-base=3.5.1=py39hd77b12b_1
   - matplotlib-inline=0.1.2=pyhd3eb1b0_2
   - mistune=0.8.4=py39h2bbff1b_1000
+  - mizani=0.7.4=pyhd8ed1ab_0
   - mkl=2021.4.0=haa95532_640
   - mkl-service=2.4.0=py39h2bbff1b_0
   - mkl_fft=1.3.1=py39h277e83a_0
@@ -113,8 +115,9 @@ dependencies:
   - numpy=1.21.5=py39h7a0a035_1
   - numpy-base=1.21.5=py39hca35cd5_1
   - olefile=0.46=py_0
-  - openssl=1.1.1n=h2bbff1b_0
+  - openssl=1.1.1q=h8ffe710_0
   - packaging=21.3=pyhd3eb1b0_0
+  - palettable=3.3.0=py_0
   - pandoc=2.11=h9490d1a_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
@@ -123,6 +126,7 @@ dependencies:
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py39hdc2b20a_0
   - pip=21.2.4=py39haa95532_0
+  - plotnine=0.9.0=pyhd8ed1ab_0
   - pluggy=1.0.0=py39haa95532_1
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - prophet=1.0.1=py39haa95532_0
@@ -138,6 +142,7 @@ dependencies:
   - python=3.9.12=h6244533_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.15.1=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
   - pytz=2021.3=pyhd3eb1b0_0
   - pywin32=302=py39h2bbff1b_2
   - pyzmq=22.3.0=py39hd77b12b_2
@@ -153,7 +158,7 @@ dependencies:
   - soupsieve=2.3.1=pyhd3eb1b0_0
   - sqlite=3.38.2=h2bbff1b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - statsmodels=0.12.2=py39h2bbff1b_0
+  - statsmodels=0.13.2=py39h5d4886f_0
   - testpath=0.5.0=pyhd3eb1b0_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.11=h2bbff1b_0
